<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>float_rise</name>
  <version>0.0.0</version>
  <description>The float_rise package</description>

  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="linzhao@uri.edu">Lin Zhao</author>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>